--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["profile-overrides"]
+
 [package]
 name = "handel"
 version = "0.1.0"
@@ -27,3 +29,7 @@ futures-cpupool = "0.1"
 tokio-timer = "0.2"
 rand_chacha = "0.1"
 stopwatch = "0.0"
+
+[profile.dev.overrides.pairing]
+opt-level = 3
+debug = false
